[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-rag-phase1"
version = "0.1.0"
description = "Phase 1 document spine for a GraphRAG pipeline."
requires-python = ">=3.11"
dependencies = [
  "lxml>=5,<6",
]

[project.optional-dependencies]
neo4j = [
  "neo4j>=5.20,<6",
]
gemini = [
  "google-generativeai>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
